--- a/sass/components/_filters-list.scss
+++ b/sass/components/_filters-list.scss
@@ -9,7 +9,7 @@
     margin-bottom: 50px;
   }
   @media screen and (max-width: 767px) {
-    width: 334px;
+    width: 100%;
     flex-wrap: wrap;
     justify-content: flex-start;
   }
